Add sync action for backend scripts in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,9 @@ services:
         - action: sync+restart
           path: ./backend/migrations
           target: /root_project/migrations
+        - action: sync
+          path: ./backend/scripts
+          target: /root_project/scripts
         - action: rebuild
           path: ./backend/uv.lock
     restart: on-failure
